# ignita

./: .env.example  .gitignore  .npmrc  .prettierrc  .prettierrc.js  AGENTS.md  README.md  app.json  bunfig.toml  drizzle.config.ts  eslint.config.js  eslint.config.ts  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.eslint.json  tsconfig.json  turbo.json
.cursor/rules/: general.mdc
.github/workflows/: ci.yaml  publish-tauri.yml
apps/mobile/: .gitignore  app.config.ts  app.json  babel.config.js  eslint.config.js  metro.config.js  package.json  tailwind.config.js  tsconfig.json
apps/mobile/android/: settings.gradle
apps/next/: eslint.config.cjs  middleware.ts  next.config.ts  package.json  tsconfig.json
apps/next/src/: App.tsx  middleware.ts
apps/socket/: Dockerfile  package.json  tsconfig.json
apps/tauri/: eslint.config.cjs  index.html  next.config.ts  package.json  postcss.config.mjs  tsconfig.json  vite.config.ts
apps/tauri/src/: App.tsx  globals.css  main.tsx
apps/tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri/src-tauri/icons/: icon.icns
apps/tauri/src-tauri/src/: lib.rs  main.rs
apps/web/: drizzle.config.ts  eslint.config.cjs  package.json  postcss.config.mjs  tailwind.config.ts  tsconfig.json
apps/web/.cache/: tsbuildinfo.json
logo/: logo.ai
patches/: motion+12.12.1.patch
src/: auth.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/auth/: page.tsx
src/app/notes/: layout.tsx  page.tsx
src/components/: AuthScreen.tsx  CreateWorkspaceDialog.tsx  PostHogProvider.tsx  SideNav.tsx  Sidebar.tsx  SidebarNotesSelection.tsx  ThemeSwitcher.tsx  TopNav.tsx  WorkspaceDropdown.tsx  notes-tree.tsx  posthog-provider.tsx  side-nav.tsx  theme-selector.tsx  top-nav.tsx  workspace-dropdown.tsx
src/components/blocks/: types.ts
src/components/dialogs/: CreateNoteDialog.tsx  CreateWorkspaceDialog.tsx  UpdateWorkplaceDialog.tsx  UpdateWorkspaceDialog.tsx  create-note-dialog.tsx
src/components/editor/: Editor.tsx  Tiptap.tsx  theme.css  tiptap.css
src/components/ui/: Button.tsx  Dialog.tsx  DropdownMenu.tsx  (+5 more)
src/lib/: notes.ts  trpc.tsx  utils.ts
src/trpc/: provider.tsx  react.tsx  server.ts
tooling/eslint/: eslint.config.js  package.json  tsconfig.json
tooling/prettier/: eslint.config.js  index.js  package.json  tsconfig.json
tooling/tailwind/: index.ts  package.json  tsconfig.json
tooling/typescript/: app.json  base.json  eslint.config.js  internal-package-root.json  internal-package.json  package.json
(+174 files in other folders)
